# platform-imessage

./: .gitattributes  .gitignore  .npmrc  .swiftformat  build-rust-server.sh  defaults.md  go.mod  go.sum  package.json  readme.md  test-overlay.sh  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
binaries/: AppleScriptServer  arm64.node  imessage-auth.css  rs_arm64.node  rust_server  rust_server_arm64_macos  rust_server_x64_macos  swift_arm64.node  swift_x64.node  x64.node
binaries/darwin-arm64/: AppleScriptServer  libNodeAPI.dylib  rust-server.node  swift-server.node
binaries/darwin-x64/: AppleScriptServer  libNodeAPI.dylib  rust-server.node  swift-server.node
binaries/macos-arm64/: libNodeAPI.dylib  rust-server.node  swift-server.node
binaries/macos-x64/: libNodeAPI.dylib  rust-server.node  swift-server.node
cmd/mautrix-imessage/: main.go
fixtures/: postdelete.json  predelete.json  schema-monterey.sql  schema-ventura.sql
imessage-ax-research.ctx/: ax-index-explorer.swift
imessage-ax-research.ctx/docs/: ax-chatdb-mapping.md  beeper-desktop-architecture.md  betterswiftax-analysis.md  chatdb-message-filtering.md  hiservices-private-apis.md  index.md
imessage-ax-research.ctx/refs/: ax-index-explorer.swift  chatdb-filter-constants.json  chatdb-filtering-refs.json  hiservices-api-addresses.json  hopper-chatkit.json  (+1 more)
loctables/: dump.sh
scripts/: axt-build  axt-dump-and-view  build-and-sign  deeplink-burst-from-chatdb.py  deeplink-burst.swift  extract-deeplinks.py  imdb-test-bench  xml-attribute-sorter.py
src/: DNDState.ts  NSUnarchiver.ts  api.ts  as-server.ts  as2.ts  async-cgbi-to-png.ts  audio-exts.json  auth.scss  auth.tsx  beeper-platform-sdk.d.ts  bplist-parser.ts  capabilities.ts  common-constants.ts  common-util.ts  constants.ts  csr.ts  db-api.ts  desktop-types.ts  dnd-state.ts  hashing.ts  heuristics.ts  image-exts.json  index.ts  info.ts  mappers.ts  mc.ts  payload.ts  persistence.ts  phaser.ts  rust-server.ts  safe-bplist-parse.ts  thread-read-store.ts  time.ts  types.ts  use-async.ts  util.ts
src/RustServer/: Cargo.toml  build-rust-server.sh  test-script.ts
src/RustServer/lib/: index.ts
src/RustServer/src/: callback.rs  error.rs  guid.rs  hashing.rs  lib.rs  log.rs  main.rs  poller.rs  sdk.rs  server.rs  unreads.rs
src/RustServer/src/hashing/: error.rs  globals.rs
src/rust/RustServer/: Cargo.toml  cbindgen.toml
src/rust/RustServer/src/: capi.rs  hashing.rs  lib.rs  poller.rs  sdk.rs
src/rust/hashing/: Cargo.toml
src/rust/hashing/src/: convert.rs  error.rs  hasher.rs  inner.rs  kind.rs  lib.rs
(+352 files in other folders)
