[package]
name = "rust_server"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "3"
serde_json = "1"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.rusqlite]
version = "0.25"
features = ["serde_json", "bundled"]
