[package]
name = "rust_server"
version = "0.4.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "3"
thiserror = "1"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6", "event-queue-api", "try-catch-api"]

[profile.release]
lto = "fat"
codegen-units = 1
