[package]
name = "rust_server"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "3"
thiserror = "1"
napi-derive = "2.0.6"

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[dependencies.napi]
version = "2"
features = ["napi8"]

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
