[package]
name = "rust_server"
version = "0.5.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
dirs = "3"
hashing = { path = "../hashing", features = ["napi"] }
napi.workspace = true
napi-derive.workspace = true
thiserror.workspace = true

[dependencies.rusqlite]
version = "0.25"
features = ["bundled"]

[build-dependencies]
napi-build.workspace = true
